redisbank-transactions/k8s/tr-app.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisbank-tr-deployment
spec:
  selector:
    matchLabels:
      app: redisbank-tr
  replicas: 1
  template:
    metadata:
      labels:
        app: redisbank-tr
    spec:
      containers:
      - name: redisbank-tr
        image: <yourdockerhubid>/redisbank-tr:latest
        imagePullPolicy: Always
        ports:
        - name: redisbank-tr
          containerPort: 8083
